changed legend text to '# transcriptions of # total in # hours' for now

--- a/html/graph/index.html
+++ b/html/graph/index.html
@@ -108,7 +108,7 @@
             legend: {
                 position: "bottom",
                 labelText: "[[title]]",
-                valueText: "Total: [[value]] of [[total]] total",
+                valueText: "[[value]] transcriptions of [[total]] total in [[category]] hour(s)",
                 valueWidth: 100,
                 valueAlign: "left",
                 equalWidths: false,
