--- a/html/graph/index.html
+++ b/html/graph/index.html
@@ -12,21 +12,16 @@
     <script>
         AmCharts.makeChart("chartdiv", {
             type: "serial",
-            titles: [{
-                size: 15,
-                text: "WeDigBio Total Transcriptions Per Hour"
-            }],
             fontSize: 12,
             marginTop: 10,
             categoryField: 'hour',
             categoryAxis: {
                 gridAlpha: 0.07,
                 axisColor: "#DADADA",
-                startOnAxis: true,
-                title: "Hours elapsed"
+                startOnAxis: true
             },
             chartCursor: {
-                cursorAlpha: 1
+                cursorAlpha: 0
             },
             responsive: {enabled: true},
             svgIcons: false,
@@ -35,18 +30,9 @@
                 dragIcon: "dragIconRoundSmall.png"
             },
             valueAxes: [{
-                id: "a1",
                 stackType: "regular",
                 gridAlpha: 0.07,
-                position: 'right',
                 title: "Number of Transcriptions"
-            }, {
-                id: 'a2',
-                gridAlpha: 0.07,
-                stackType: "regular",
-                position: "left",
-                title: "Number of Transcriptions",
-                includeHidden: true
             }],
             "dataLoader": {
                 "url": "wedigbio.csv",
@@ -54,16 +40,19 @@
                 "showErrors": true,
                 "postProcess": function (data, config, chart) {
                     var graphs = []
-                            , hidden_graphs = []
                       , chartData = []
+                      , collections = []
                       , current_hour;
 
-                    for (var i=0; i < data.length; i++){
+                    var i;
+                    for (i=0; i < data.length; i++){
                         var item = data[i]
                           , collection = item.col0
                           , count = item.col1
                           , hour = item.col2
                           , obj;
+
+                        if (collections.indexOf(collection) === -1) collections.push(collection);
 
                         if (current_hour != hour) {
                             if (obj) chartData.push(obj);
@@ -73,42 +62,30 @@
                         }
                             obj[collection] = count;
                     }
-                    for (var col in chartData[0]){
-                        if (col != "hour"){
+
+                    var col_i, col;
+                    for (col_i = 0; col_i < collections.length; ++col_i){
+                        col = collections[col_i];
+                        if (col != "") {
                             graphs.push({
-                                valueAxis: "a1",
                                 type: "line",
                                 title: col,
                                 lineAlpha: 0,
                                 valueField: col,
                                 fillAlphas: 0.6,
-                                balloonText: "[[value]] out of [[total]] total"
-                            })
-
-                            hidden_graphs.push({
-                                valueAxis: "a2",
-                                type: "line",
-                                title: col,
-                                hidden: false,
-                                visibleInLegend:false,
-                                categoryBalloonAlpha: 0,
-//                                cursorAlpha: 0,
-                                lineAlpha: 0,
-                                lineColor: '',
-                                valueField: col,
-                                fillAlphas: 0,
-                                balloonText: ""
+                                baloonText: "<span>[[col]]</span><span style='font-size:14px; color:#000000;'><b>[[collection]][[total]]</b></span>"
                             })
                         }
                     }
-                    chart.graphs = graphs.concat(hidden_graphs);
+
+                    chart.graphs = graphs;
                     return chartData;
                 }
             },
             legend: {
                 position: "bottom",
                 labelText: "[[title]]",
-                valueText: "[[value]] transcriptions of [[total]] total in [[category]] hour(s)",
+                valueText: "Total: [[value]]",
                 valueWidth: 100,
                 valueAlign: "left",
                 equalWidths: false,
