--- a/html/graph/index.html
+++ b/html/graph/index.html
@@ -2,103 +2,148 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Transcriptions</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="amcharts/amcharts.js" type="text/javascript"></script>
-    <script src="amcharts/serial.js" type="text/javascript"></script>
-    <script src="amcharts/plugins/dataloader/dataloader.js" type="text/javascript"></script>
-    <script src="amcharts/plugins/responsive/responsive.js" type="text/javascript"></script>
-    <script>
-        AmCharts.makeChart("chartdiv", {
-            type: "serial",
-            fontSize: 12,
-            marginTop: 10,
-            categoryField: 'hour',
-            categoryAxis: {
-                gridAlpha: 0.07,
-                axisColor: "#DADADA",
-                startOnAxis: true
-            },
-            chartCursor: {
-                cursorAlpha: 0
-            },
-            responsive: {enabled: true},
-            svgIcons: false,
-            chartScrollbar: {
-                color: "FFFFFF",
-                dragIcon: "dragIconRoundSmall.png"
-            },
-            valueAxes: [{
-                stackType: "regular",
-                gridAlpha: 0.07,
-                title: "Number of Transcriptions"
-            }],
-            "dataLoader": {
-                "url": "wedigbio.csv",
-                "format": "csv",
-                "showErrors": true,
-                "postProcess": function (data, config, chart) {
-                    var graphs = []
-                      , chartData = []
-                      , collections = []
-                      , current_hour;
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Transcriptions</title>
+  <link rel="stylesheet" href="style.css" type="text/css">
+  <script src="amcharts/amcharts.js" type="text/javascript"></script>
+  <script src="amcharts/serial.js" type="text/javascript"></script>
+  <script src="amcharts/plugins/dataloader/dataloader.js" type="text/javascript"></script>
+  <script src="amcharts/plugins/responsive/responsive.js" type="text/javascript"></script>
+  <script>
+    AmCharts.makeChart("chartdiv", {
+      type: "serial",
+      titles: [{
+        size: 15,
+        text: "WeDigBio Total Transcriptions Per Hour"
+      }],
+      fontSize: 12,
+      marginTop: 10,
+      categoryField: 'hour',
+      categoryAxis: {
+        gridAlpha: 0.07,
+        axisColor: "#DADADA",
+        startOnAxis: true,
+        title: "Hours elapsed"
+      },
+      chartCursor: {
+        cursorAlpha: 1
+      },
+      responsive: {enabled: true},
+      svgIcons: false,
+      chartScrollbar: {
+        color: "FFFFFF",
+        dragIcon: "dragIconRoundSmall.png"
+      },
+      valueAxes: [{
+        id: "a1",
+        stackType: "regular",
+        gridAlpha: 0.07,
+        position: 'right',
+        title: "Number of Transcriptions"
+      }, {
+        id: 'a2',
+        gridAlpha: 0.07,
+        stackType: "regular",
+        position: "left",
+        title: "Number of Transcriptions",
+        includeHidden: true
+      }],
+      "dataLoader": {
+        "url": "wedigbio.csv",
+        "format": "csv",
+        "showErrors": true,
+        "postProcess": function (data, config, chart) {
+          var graphs = []
+            , hidden_graphs = []
+            , collections = []
+            , chartData = []
+            , current_hour;
 
-                    var i;
-                    for (i=0; i < data.length; i++){
-                        var item = data[i]
-                          , collection = item.col0
-                          , count = item.col1
-                          , hour = item.col2
-                          , obj;
+          //prepare the data for consumption by amcharts
+          for (var i = 0; i < data.length; i++) {
+            var item = data[i]
+              , collection = item.col0
+              , count = item.col1
+              , hour = item.col2
+              , obj;
 
-                        if (collections.indexOf(collection) === -1) collections.push(collection);
-
-                        if (current_hour != hour) {
-                            if (obj) chartData.push(obj);
-                            obj = {}; //probably not necessary
-                            current_hour = hour;
-                            obj["hour"] = hour;
-                        }
-                            obj[collection] = count;
-                    }
-
-                    var col_i, col;
-                    for (col_i = 0; col_i < collections.length; ++col_i){
-                        col = collections[col_i];
-                        if (col != "") {
-                            graphs.push({
-                                type: "line",
-                                title: col,
-                                lineAlpha: 0,
-                                valueField: col,
-                                fillAlphas: 0.6,
-                                baloonText: "<span>[[col]]</span><span style='font-size:14px; color:#000000;'><b>[[collection]][[total]]</b></span>"
-                            })
-                        }
-                    }
-
-                    chart.graphs = graphs;
-                    return chartData;
-                }
-            },
-            legend: {
-                position: "bottom",
-                labelText: "[[title]]",
-                valueText: "Total: [[value]]",
-                valueWidth: 100,
-                valueAlign: "left",
-                equalWidths: false,
-                periodValueText: "Total: [[value.high]]",
-
+            if (collections.indexOf(collection) === -1) collections.push(collection);
+            if (current_hour != hour) {
+              if (obj) chartData.push(obj);
+              obj = {}; //probably not necessary
+              current_hour = hour;
+              obj["hour"] = hour;
             }
-        });
+            obj[collection] = count;
+          }
 
-    </script>
+          /////////////////////////////////////
+          //create a graph for each collection
+          /////////////////////////////////////
+          for (var i = 0; i < collections.length; i++) {
+            var col = collections[i];
+            if (col != "") {
+              graphs.push({
+                valueAxis: "a1",
+                type: "line",
+                title: col,
+                lineAlpha: 0,
+                valueField: col,
+                fillAlphas: 0.6,
+                balloonText: "[[title]] - [[value]] out of [[total]] total"
+              })
+
+              hidden_graphs.push({
+                valueAxis: "a2",
+                type: "line",
+                title: col,
+                hidden: false,
+                visibleInLegend: false,
+                categoryBalloonAlpha: 0,
+//                                cursorAlpha: 0,
+                lineAlpha: 0,
+                lineColor: '',
+                valueField: col,
+                fillAlphas: 0,
+                balloonText: ""
+              })
+            }
+          }
+          chart.graphs = graphs.concat(hidden_graphs);
+
+          //////////////////////////////////////////
+          // if any of the data is missing a collection, set
+          // that collections count to zero
+          //////////////////////////////////////////
+          for (var i = 0; i < chartData.length; i++) {
+            var data = chartData[i];
+            collections.forEach(function (col) {
+              if (!data.hasOwnProperty(col)) {
+                data[col] = 0
+              }
+            })
+          }
+
+          return chartData;
+        }
+      },
+      legend: {
+        position: "bottom",
+        labelText: "[[title]]",
+        valueText: "[[value]] transcriptions of [[total]] total in [[category]] hour(s)",
+        valueWidth: 100,
+        valueAlign: "left",
+        equalWidths: true,
+        periodValueText: "Total: [[value.high]]"
+      }
+    });
+
+  </script>
 </head>
 
 <body>
-<div id="chartdiv" style="width:100%; height:400px;"></div>
+<div id="chartdiv" style="width:100%; height:500px;"></div>
 </body>
 
 </html>
+
