--- a/html/graph/tc.html
+++ b/html/graph/tc.html
@@ -70,11 +70,12 @@
             if (collections.indexOf(collection) === -1) collections.push(collection);
             if (current_hour != hour) {
               if (obj) chartData.push(obj);
-              obj = {}; //probably not necessary
+              obj = {};
               current_hour = hour;
               obj["hour"] = hour;
             }
             obj[collection] = count;
+            if (i+1 == data.length) chartData.push(obj) //make sure we push last item
           }
 
           /////////////////////////////////////
