--- a/html/graph/tc.html
+++ b/html/graph/tc.html
@@ -67,19 +67,21 @@
               , hour = item.col2
               , obj;
 
-            if (collections.indexOf(collection) === -1) collections.push(collection);
-            if (current_hour != hour) {
-              if (obj) chartData.push(obj);
-              obj = {};
-              current_hour = hour;
-              obj["hour"] = hour;
+            if (collection != "" && typeof(collection) != 'undefined'){
+              if (collections.indexOf(collection) === -1 && collection != "") collections.push(collection);
+              if (current_hour != hour && typeof(hour) != "undefined") {
+                if (obj) chartData.push(obj);
+                obj = {};
+                current_hour = hour;
+                obj["hour"] = hour;
+              }
+              if (typeof(count) != 'undefined'){
+                obj[collection] = count;
+              }
+              if (i+1 == data.length)) {
+                chartData.push(obj)
+              } //make sure we push last item if it's there
             }
-            if (typeof(count) != 'undefined'){
-              obj[collection] = count;
-            }
-            if (i+1 == data.length && typeof(obj["hour"] != 'undefined')) {
-              chartData.push(obj)
-            } //make sure we push last item if it's there
           }
 
           /////////////////////////////////////
