added some validation to ensure amcharts isn't reading a blank line from the csv

--- a/html/graph/tc.html
+++ b/html/graph/tc.html
@@ -78,7 +78,7 @@
               if (typeof(count) != 'undefined'){
                 obj[collection] = count;
               }
-              if (i+1 == data.length)) {
+              if (i+1 == data.length) {
                 chartData.push(obj)
               } //make sure we push last item if it's there
             }
